[package]
name = "eeyore"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
env_logger = "0.4"
error-chain = "0.11"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
log = "0.3"
ring = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
base64 = "0.6"
docopt = "0.8"
hex = "0.2"
